squished bug where could not win game and where last correct answer not adding to score

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -9,10 +9,11 @@ body{
     margin : 20px auto;
     margin-top: 150px;
     background-color: #111111;
+    opacity: 0.9;
     height: 600px;
     width : 960px;
     border-radius: 5px;
-    box-shadow: 0px 5px 100px 0px;
+    box-shadow: 0px 5px 200px 0px;
     position: relative;
     color: orange;
 }
